--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,20 +3,24 @@
   "private": true,
   "version": "0.5.0",
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0",
+    "pnpm": ">=8.0.0"
+  },
   "scripts": {
     "build": "vite build",
     "dev": "vite",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@tsconfig/svelte": "^5.0.2",
-    "rollup": "^4.24.3",
-    "svelte": "^4.2.19",
-    "svelte-check": "^3.6.7",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@tsconfig/svelte": "^5.0.6",
+    "rollup": "^4.53.3",
+    "svelte": "^4.2.20",
+    "svelte-check": "^4.3.4",
     "tslib": "^2.8.1",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.11"
+    "typescript": "^5.9.3",
+    "vite": "^5.4.21"
   },
   "dependencies": {
     "@vscode/codicons": "^0.0.35",
